# PTRHash

./: .gitignore  Cargo.toml  justfile  readme.md  readme.org
examples/: hash-inverse.rs  many_keys.rs  memory_bandwidth.rs
src/: bucket.rs  displace.rs  displacing.rs  fastmod.rs  hash.rs  hash_inverse.rs  index.rs  lib.rs  local_ef.rs  matching.rs  pack.rs  peeling.rs  pilots.rs  reduce.rs  shard.rs  sort_buckets.rs  stats.rs  test.rs  tiny_ef.rs  types.rs  util.rs
