[package]
name = "pthash-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Things are _slightly_ faster without debug symbols, but they're nice for debugging.
debug = true
# Needed for good inlining across crates, in particular murmur2.
lto = "thin"
incremental = true

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.4.6", features = ["derive"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
murmur2 = "0.1.0"
radsort = "0.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rustc-hash = "1.1.0"
smallvec = "1.11.1"
strength_reduce = "0.2.4"
sucds = "0.8.0"
