[package]
name = "ptr_hash"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ragnar Groot Koerkamp"]
repository = "https://github.com/RagnarGrootKoerkamp/ptrhash"
homepage = "https://github.com/RagnarGrootKoerkamp/ptrhash"
description = "A minimal perfect hash function adapted from PTHash"
readme = "readme.md"
keywords = ["hashing", "minimal", "perfect", "mphf"]
categories = ["data-structures", "science"]
include = ["src/**/*", "examples/*", "readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Things are _slightly_ faster without debug symbols, but they're nice for debugging.
debug = true
# Needed for good inlining across crates, in particular murmur2.
lto = "thin"
incremental = true

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
fxhash = "0.2.1"
itertools = "0.11.0"
murmur2 = "0.1.0"
radsort = "0.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"
rdst = "0.20.11"
rustc-hash = "1.1.0"
sucds = "0.8.0"
