[package]
name = "ptr_hash"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Ragnar Groot Koerkamp"]
repository = "https://github.com/RagnarGrootKoerkamp/ptrhash"
homepage = "https://github.com/RagnarGrootKoerkamp/ptrhash"
description = "A minimal perfect hash function adapted from PTHash"
readme = "readme.md"
keywords = ["hashing", "minimal", "perfect", "mphf"]
categories = ["data-structures", "science"]
include = ["src/**/*", "examples/*", "readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Things are _slightly_ faster without debug symbols, but they're nice for debugging.
debug = true
# Needed for good inlining across crates, in particular murmur2.
lto = "thin"
incremental = true

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
common_traits = "0.10.0"
either = "1.9.0"
epserde = { version = "0.2.2", optional = true }
epserde-derive = {version = "0.2.0", optional = true }
itertools = "0.11.0"
lazy_static = "1.4.0"
radsort = "0.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"
rdst = "0.20.11"
rustc-hash = "1.1.0"
sucds = "0.8.0"
tempfile = "3.8.1"

# Default included hash functions
cityhash-102-rs = "0.1.0"
fastmurmur3 = "0.2.0"
fxhash = "0.2.1"
hashers =  "1.0.1"
highway =  "1.1.0"
metrohash =  "1.0.6"
murmur2 = "0.1.0"
murmur3 =  "0.5.2"
wyhash =  "0.5.0"
xxhash-rust = {version = "0.8.7", features = ["xxh64", "xxh3"]}

[features]
default = []
epserde = ["dep:epserde", "dep:epserde-derive"]
